<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_ibood_langauge">Select iBood language</string>
    <string-array name="pref_ibood_langauge_titles">
        <item>The Netherlands</item>
        <item>Belgium</item>
        <item>United Kingdom</item>
        <item>Germany</item>
        <item>Ireland</item>
        <item>Austria</item>
        <item>Poland</item>
    </string-array>
    <string-array name="pref_ibood_langauge_values">
        <item>nl</item>
        <item>be</item>
        <item>uk</item>
        <item>de</item>
        <item>ie</item>
        <item>at</item>
        <item>pl</item>
    </string-array>


    <string name="pref_when_enabled">Select when app is enabled</string>

    <string-array name="pref_when_enabled_titles">
        <item>Normal and hunt</item>
        <item>Only normal</item>
        <item>Only hunt</item>
    </string-array>
    <string-array name="pref_when_enabled_values">
        <item>both</item>
        <item>normal</item>
        <item>hunt</item>
    </string-array>

    <string name="prof_realtime_hunt">Select if realtime hunt is enabled (may drain battery)</string>

    <string-array name="prof_realtime_hunt_titles">
        <item>Disabled</item>
        <item>Only enabled on Wi-Fi</item>
        <item>Enabled</item>
    </string-array>
    <string-array name="prof_realtime_hunt_values">
        <item>disabled</item>
        <item>wifi</item>
        <item>enabled</item>
    </string-array>


    <!-- Settings for the Auto Opener -->
    <string name="pref_header_auto_opener">Auto Opener</string>

    <string name="pref_enable_auto_opener">Enable Auto Opener</string>
    <string name="pref_enable_auto_opener_desc">Enable the Auto Opener which will open automated item in a browser.</string>

    <string name="pref_open_onscreen_notification">Open onscreen notification</string>
    <string name="pref_open_onscreen_notification_desc">Open onscreen notification instead of directly opening in browser.</string>

    <string name="pref_browser_selection">Select default browser</string>

    <string name="pref_enable_sound_on_open">Enable sound on open</string>
    <string name="pref_enable_sound_on_open_desc">Enable playing a sound when opening an product</string>


    <string name="pref_sound_on_open">Select a sound to play</string>

    <string name="pref_open_title_contains">Open when title contains</string>
    <string name="pref_open_title_contains_desc">Add as many words you want. When one of the words matches a word in the title of an item from iBood, the item will being opened in the browser to continue purchase.</string>

    <string name="new_item">Add new item</string>

    <string name="delete_item">Remove item</string>


    <!-- Settings for Notifications -->

    <string name="pref_header_notifications">Sound and vibration (only for hunt)</string>

    <string name="pref_enable_vibrate_on_deal">Vibrate on new deal</string>

    <string name="pref_enable_sound_on_deal">Enable sound on new deal</string>
    <string name="pref_sound_on_deal">Select a sound to play</string>

    <string name="pref_ringtone_silent">Silent</string>
    <string name="ibood_service_desc">Updates the notification, without it won\'t update realtime.</string>
    <string name="loading_wait">Loading. Please wait...</string>
    <string name="net_working_internet">Please make sure you\'ve an working internet connection.</string>
    <string name="device_not_supported">You\'re device isn\'t supported since the Google Play Services isn\'t installed and/or recoverable.</string>

    <string-array name="pref_notification_titles">
        <item>Before deal</item>
        <item>On deal</item>
        <item>Off</item>
    </string-array>
    <string-array name="pref_notification_values">
        <item>before</item>
        <item>on</item>
        <item>off</item>
    </string-array>
</resources>
