<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="enable_auto_opener"
        android:title="@string/pref_enable_auto_opener"
        android:summary="@string/pref_enable_auto_opener_desc"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:dependency="enable_auto_opener"
        android:key="open_onscreen_notification"
        android:title="@string/pref_open_onscreen_notification"
        android:summary="@string/pref_open_onscreen_notification_desc"
        android:defaultValue="true" />

    <nl.devapp.iboodnotifications.preferences.BrowserPreference
        android:dependency="enable_auto_opener"
        android:key="browser_selection"
        android:title="@string/pref_browser_selection"
        android:positiveButtonText="@null"
        android:negativeButtonText="@null"
        android:defaultValue="com.android.chrome" />

    <Preference
        android:dependency="enable_auto_opener"
        android:key="open_title_contains"
        android:title="@string/pref_open_title_contains">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="nl.devapp.iboodnotifications"
            android:targetClass="nl.devapp.iboodnotifications.OpenTitleActivity"
            />

    </Preference>

    <CheckBoxPreference
        android:dependency="enable_auto_opener"
        android:key="enable_sound_on_open"
        android:title="@string/pref_enable_sound_on_open"
        android:summary="@string/pref_enable_sound_on_open_desc"
        android:defaultValue="true" />

    <RingtonePreference
        android:dependency="enable_sound_on_open"
        android:key="sound_on_open"
        android:title="@string/pref_sound_on_open"
        android:ringtoneType="all"
        android:defaultValue="content://settings/system/notification_sound" />

</PreferenceScreen>
