<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="enable_vibrate_on_deal"
        android:title="@string/pref_enable_vibrate_on_deal"
        android:defaultValue="before"
        android:entries="@array/pref_notification_titles"
        android:entryValues="@array/pref_notification_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="enable_sound_on_deal"
        android:title="@string/pref_enable_sound_on_deal"
        android:defaultValue="off"
        android:entries="@array/pref_notification_titles"
        android:entryValues="@array/pref_notification_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <RingtonePreference
        android:key="sound_on_deal"
        android:title="@string/pref_sound_on_deal"
        android:ringtoneType="notification"
        android:defaultValue="content://settings/system/notification_sound" />

</PreferenceScreen>
